<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall2"
    tools:context=".view.bible.bible">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/andada"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/bible"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@android:string/yes">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="245dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/andada"
                            android:paddingBottom="5dp"
                            android:text="@string/old_testament"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/BtnBibleOT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/imageBtnTxt"
                            android:src="@drawable/old_testament"
                            tools:ignore="DuplicateSpeakableTextCheck" />

                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/andada"
                            android:paddingBottom="5dp"
                            android:text="@string/new_testament"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/BtnBibleNt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/backgroudimgbtn"
                            android:contentDescription="@string/imageBtnTxt"
                            android:cropToPadding="false"
                            android:scaleType="centerCrop"
                            android:src="@drawable/new_testament"
                            tools:ignore="ImageContrastCheck" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="245dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/andada"
                            android:paddingBottom="5dp"
                            android:text="@string/bible_reading_program"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/BtnProgramme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/backgroudimgbtn"
                            android:contentDescription="@string/imageBtnTxt"
                            android:cropToPadding="false"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bible2"
                            tools:ignore="ImageContrastCheck" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>